deploy.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: argocd-webhook
  namespace: argocd-webhooks
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
