service.yaml
apiVersion: "v1"
kind: Service
metadata:
  name: nginx
  namespace: argocd-webhooks 
spec:
  selector:  
    app: nginx   
  type: ClusterIP
  ports:
  - port: 80  
    targetPort: 80
